<?xml version="1.0"?>
<package format="2">
  <name>rviz_tool_cursor</name>
  <version>0.0.0</version>
  <description>The rviz_tool_cursor package</description>

  <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>
  <author email="michael.ripperger@swri.org">Michael Ripperger</author>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>pluginlib</depend>
<!--  <depend>pcl_ros</depend>-->

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
