<?xml version="1.0"?>
<package format="2">
  <name>rviz_tool_cursor</name>
  <version>1.0.1</version>
  <description>The rviz_tool_cursor package</description>

  <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>
  <author email="michael.ripperger@swri.org">Michael Ripperger</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <depend>libqt5-widgets</depend>
  <depend>pluginlib</depend>
  <depend>rviz</depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
